Prise en compte des IGH génération convocation

--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -34,10 +34,14 @@ foreach($this->informationsMembre as $val => $membre){
 				(count($dossierInfos['infosEtab']['adresses']) > 0 && !empty($commune))
 				&& $dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]
 				&& (
+					(
 					$membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE']
 					&& $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE']
 					&& $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']
 					)
+					||
+					$membre['classes'][ $dossierInfos['infosEtab']['informations']['ID_CLASSE']]['ID_COMMISSIONMEMBRE']
+				)
 			){
 				$cptConcerne ++;
 			}
@@ -80,10 +84,14 @@ foreach($this->informationsMembre as $val => $membre){
 						count($dossierInfos['infosEtab']['adresses']) > 0
 						&& $dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]
 						&& (
+							(
 							$membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE']
 							&& $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE']
 							&& $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']
 							)
+							||
+							$membre['classes'][ $dossierInfos['infosEtab']['informations']['ID_CLASSE']]['ID_COMMISSIONMEMBRE']
+						)
 						&& isset($dossierInfos["HEURE_DEB_AFFECT"])
 					){
 						$heureDebutTab = explode(":",$dossierInfos["HEURE_DEB_AFFECT"]);
@@ -101,9 +109,13 @@ foreach($this->informationsMembre as $val => $membre){
 						count($dossierInfos['infosEtab']['adresses']) > 0
 						&& $dossierInfos['infosEtab']['adresses'][0]['LIBELLE_COMMUNE'] == $commune[0]
 						&& (
+							(
 							$membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE']
 							&& $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE']
 							&& $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']
+							)
+							||
+							$membre['classes'][ $dossierInfos['infosEtab']['informations']['ID_CLASSE']]['ID_COMMISSIONMEMBRE']
 						)
 					){
 						retrieveInfoDossier($infosDoss, $dossierInfos);
@@ -154,9 +166,13 @@ foreach($this->informationsMembre as $val => $membre){
 						count($dossierInfos['infosEtab']['adresses']) > 0
 						&& $dossierInfos['infosEtab']['adresses'][0]['NUMINSEE_COMMUNE'] == $val['NUMINSEE_COMMUNE']
 						&& (
+							(
 							$membre['categories'][ $dossierInfos['infosEtab']['informations']['ID_CATEGORIE']]['ID_COMMISSIONMEMBRE']
 							&& $membre['types'][ $dossierInfos['infosEtab']['informations']['ID_TYPEACTIVITE']]['ID_COMMISSIONMEMBRE']
 							&& $membre['dossiertypes'][ $dossierInfos['TYPE_DOSSIER']]['ID_COMMISSIONMEMBRE']
+							)
+							||
+							$membre['classes'][ $dossierInfos['infosEtab']['informations']['ID_CLASSE']]['ID_COMMISSIONMEMBRE']
 						)
 					){
 						retrieveInfoDossier($grpLoop, $dossierInfos);
