--- a/application/views/scripts/piece-jointe/form.phtml
+++ b/application/views/scripts/piece-jointe/form.phtml
@@ -30,6 +30,9 @@
 			<?php endforeach ?>
 			</dd>
 		<?php endif ?>
+
+		<dt>Pièce jointe signé<br/></dt>
+		<dd><input type='checkbox' name='signatureFichier' id= 'signatureFichier' value='1' /> ( Fichier signé ) </dd>
 	
 	</dl>
 
