--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -40,6 +40,7 @@
 				"fileName" => $this->fileName, 
 				"fileSigned" => $this->fileSigned,
 				"status" => $this->status, 
+				"mail_user" => $this->mail_user, 
 				)) 
 		?>
 		</tbody> 
