--- a/application/views/scripts/piece-jointe/form-signe.phtml
+++ b/application/views/scripts/piece-jointe/form-signe.phtml
@@ -1,4 +1,4 @@
-<form method='post' id='formUpload' name='formUpload' enctype='multipart/form-data' action='/piece-jointe/add' target='hiddeniframe' >
+<form method='post' id='formSigneUpload' name='formSigneUpload' enctype='multipart/form-data' action='' target='hiddeniframe' >
 
 	<dl class='dl-horizontal'>
 	
@@ -34,5 +34,17 @@
 
 	<input type='hidden' name='type' id='typeUpload' value='<?php echo $this->type ?>' />
 	<input type='hidden' name='id' id='identifiant' value='<?php echo $this->identifiant ?>' />
-	
+
+	<p id="demo"></p>
+
 </form>
+
+<script>
+  var str1 = "/piece-jointe/addlie?id_pj=";
+  var str2 =  $(".addPJSigne").val();
+  var res = str1.concat(str2);
+  $("form").prop('action', res);
+ // document.getElementById("demo").innerHTML = res;
+
+</script>
+
