--- a/application/views/scripts/piece-jointe/form-signe.phtml
+++ b/application/views/scripts/piece-jointe/form-signe.phtml
@@ -30,12 +30,13 @@
 			<?php endforeach ?>
 			</dd>
 		<?php endif ?>
+		<dd><input type='hidden' name='signatureFichier' id= 'signatureFichier' value='1' /></dd>
 	</dl>
 
 	<input type='hidden' name='type' id='typeUpload' value='<?php echo $this->type ?>' />
 	<input type='hidden' name='id' id='identifiant' value='<?php echo $this->identifiant ?>' />
 
-	<p id="demo"></p>
+	<p>Click on this paragraph.</p>
 
 </form>
 
@@ -43,7 +44,13 @@
   var str1 = "/piece-jointe/addlie?id_pj=";
   var str2 =  $(".addPJSigne").val();
   var res = str1.concat(str2);
-  $("form").prop('action', res);
+  $("form").prop('action', str2);
+
+  $(document).ready(function(){
+  $("p").click(function(){
+    alert(str2);
+  });
+});
  // document.getElementById("demo").innerHTML = res;
 
 </script>
