Récupération idPjParente formulaire ajout PjLiee

--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -29,8 +29,8 @@
     </td>
     <?php /* Action*/ ?>
     <td>
-    <button class='addPJSigne' value = '/piece-jointe/addlie?id_pj=<?php echo $pj["ID_PIECEJOINTE"] ?>'>
-        <i class="icon-plus-sign"></i></a>
+    <button class='addPJSigne' value='<?php echo $pj["ID_PIECEJOINTE"] ?>'>
+        <i class="icon-plus-sign"></i>
     </button>
     </td>
     <td>
