--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -72,14 +72,14 @@
 
 <script type="text/javascript">
         
-        Dropzone.autoDiscover = false;
+	Dropzone.autoDiscover = false;
         
 	$(document).ready(function() {
 
 		$("body").append("<iframe name='hiddeniframe' id='hiddeniframe' src='about:blank' style='width:0px; height:0px' >");
 		/* $(".table_liste").click(function(){
 			$("#lien").slideToggle("slow");
-  		});	*/	  
+  		}); */ 
 		// Bouton de la pièce jointe
 		$("#addPJ").button({
 		
@@ -126,45 +126,47 @@
 			});
 		});
                 
-                /* GESTION DU GLISSEZ DEPOSER */
-                $("#addPJQuick").click(function() {
-                    $('#dropzone').toggle();
-                });
-				// Bouton de la pièce jointe signé
-				$(".addPJSigne").click(function(){
-				// Dialogue du formulaire
-				$.ajax({
-					url: "/piece-jointe/form-signe",
-					data: "id=" + $("#idLinkPJ").val() + "&type=" + $("#typePJ").val(),
-					type: "post",
-					success: function(result) {
-						$("#formSigneAddPJ").html(result).dialog({
-							resizable: false,
-							height: 500,
-							width: 580,
-							modal: true,
-							buttons: {
-								'Ajouter la pièce jointe signé': function() {
-									// Envoi du formulaire dans formSigne
-									$("#formSigneUpload").submit();
+		/* GESTION DU GLISSEZ DEPOSER */
+		$("#addPJQuick").click(function() {
+			$('#dropzone').toggle();
+		});
+		// Bouton de la pièce jointe signé
+		$(".addPJSigne").click(function(){
+			idPjParente = $(this).val();
+			
+			// Dialogue du formulaire
+			$.ajax({
+				url: "/piece-jointe/form-signe",
+				data: "id=" + $("#idLinkPJ").val() + "&type=" + $("#typePJ").val() + "&idPj=" + idPjParente,
+				type: "post",
+				success: function(result) {
+					$("#formSigneAddPJ").html(result).dialog({
+						resizable: false,
+						height: 500,
+						width: 580,
+						modal: true,
+						buttons: {
+							'Ajouter la pièce jointe signé': function() {
+								// Envoi du formulaire dans formSigne
+								$("#formSigneUpload").submit();
 
-									// On ferme la boite de dialogue
-									$(this).dialog('close');
+								// On ferme la boite de dialogue
+								$(this).dialog('close');
 
-									// On ouvre la barre de chargement 
-									$("<div id='load' style='text-align: center'><img src='/images/bar.gif' alt='Upload en cours' /></div>").dialog({
-										resizable: false,
-										height: 45,
-										width: 250,
-										modal: true,
-										dialogClass: 'noTitleStuff'
-									});
-								}
+								// On ouvre la barre de chargement 
+								$("<div id='load' style='text-align: center'><img src='/images/bar.gif' alt='Upload en cours' /></div>").dialog({
+									resizable: false,
+									height: 45,
+									width: 250,
+									modal: true,
+									dialogClass: 'noTitleStuff'
+								});
 							}
-						});
-					}
-				});
+						}
+					});
+				}
 			});
+		});
                 
                 var myDropzone = new Dropzone("#dropzone", { 
                     url: "/piece-jointe/add?id=" + $("#idLinkPJ").val() + "&type=" + $("#typePJ").val(),
@@ -261,22 +263,22 @@
 
 		 // Affichage des dossiers enfants
 		 $(".table_liste").live("click", function() {
-          var container = this;
-          if( $(this).hasClass("active") ) {
-              $(this).next().slideUp(400, function() {$(container).next().remove()});
-              $(this).toggleClass("active");
-          }
-          /*else {
-              $(container).find(".load").show();
-			  $(container).toggleClass("active").find(".load").hide();
-			 // $("#lien").slideToggle("slow");
+			var container = this;
+			if( $(this).hasClass("active") ) {
+				$(this).next().slideUp(400, function() {$(container).next().remove()});
+				$(this).toggleClass("active");
+			}
+			/* else {
+				$(container).find(".load").show();
+				$(container).toggleClass("active").find(".load").hide();
+				$("#lien").slideToggle("slow");
 
-			 // $(container).after("<tr class='table_liste' value='test' style='overflow: auto; height: auto;' >" + "</tr>").next().slideDown();
-             /* $.post("/piece-jointe/display-ajax-pj", {parent: $(this).attr("id")}, function(html) {
-                  $(container).toggleClass("active").find(".load").hide();
-                  $(container).after("<li class='ui-helper-hidden' style='overflow: auto; height: auto;' >" + html + "</li>").next().slideDown();
-              });*/
-          }*/
+				$(container).after("<tr class='table_liste' value='test' style='overflow: auto; height: auto;' >" + "</tr>").next().slideDown();
+				$.post("/piece-jointe/display-ajax-pj", {parent: $(this).attr("id")}, function(html) {
+					$(container).toggleClass("active").find(".load").hide();
+					$(container).after("<li class='ui-helper-hidden' style='overflow: auto; height: auto;' >" + html + "</li>").next().slideDown();
+				});
+			} */
          });
 		
 	});
