--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -4,7 +4,10 @@
     <td>
         <a 
             class="file <?php echo substr(strtolower($pj['EXTENSION_PIECEJOINTE']), 1, 3) ?>"
-            href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'id' => $this->id, 'idpj' => $pj['ID_PIECEJOINTE'], 'type' => $this->type)) ?>' <?php if ($pj['DESCRIPTION_PIECEJOINTE']): ?> title="<?php echo $pj['DESCRIPTION_PIECEJOINTE'] ?>" <?php endif ?> target='_blank' ><?php echo $pj['NOM_PIECEJOINTE'].$pj['EXTENSION_PIECEJOINTE'] ?></a>
+            href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'id' => $this->id, 'idpj' => $pj['ID_PIECEJOINTE'], 'type' => $this->type)) ?>'
+            <?php if ($pj['DESCRIPTION_PIECEJOINTE']): ?> title="<?php echo $pj['DESCRIPTION_PIECEJOINTE'] ?>" <?php endif ?>
+            target='_blank' ><?php echo $pj['NOM_PIECEJOINTE'].$pj['EXTENSION_PIECEJOINTE'] ?>
+        </a>
     </td>
     
     <?php /* Description */ ?>
@@ -20,12 +23,12 @@
     <td>
         <?php if(($this->verrou != 1) && ($pj['SIGNE_PIECEJOINTE'] != 1)): ?>
             <a class='sign' href='/dossier/sign?id=<?php echo  $this->id?>&id_pj= <?php echo $pj['ID_PIECEJOINTE']?>&fileName=<?php echo $pj['NOM_PIECEJOINTE']?>&email_address=<?php echo $this->mail_user?>'>
-                 <i class="icon-pencil"></i>
+                <i class="icon-pencil"></i>
             </a>
         <?php endif ?>
     </td>
     <td>
-          <i class="<?php echo  $this->translateStatus;?>" title="<?php echo $this->infoStatus;?>"></i>
+        <i class="<?php echo  $this->translateStatus;?>" title="<?php echo $this->infoStatus;?>"></i>
     </td>
     <?php /* Action*/ ?>
     <td>
