Récupération idPj principale pour ajout liaison

--- a/application/views/scripts/piece-jointe/form-signe.phtml
+++ b/application/views/scripts/piece-jointe/form-signe.phtml
@@ -1,4 +1,4 @@
-<form method='post' id='formSigneUpload' name='formSigneUpload' enctype='multipart/form-data' action='/piece-jointe/addlie' target='hiddeniframe' >
+<form method='post' id='formSigneUpload' name='formSigneUpload' enctype='multipart/form-data' action='/piece-jointe/addlie?idPj=<?php echo $this->idPj ?>' target='hiddeniframe' >
 
 	<dl class='dl-horizontal'>
 	
