--- a/application/views/scripts/piece-jointe/results/piece-jointe-signe.phtml
+++ b/application/views/scripts/piece-jointe/results/piece-jointe-signe.phtml
@@ -1,4 +1,4 @@
-<li class="piecejointe <?php /*if($this->NB_ENFANTS > 0)*/ echo "slide" ?>" id="<?php echo $this->ID_PIECEJOINTE ?>">
+<li class="piecejointe <?php if($this->NB_ENFANTS > 0) echo "slide" ?>" id="<?php echo $this->ID_PIECEJOINTE ?>">
 <?php echo $this->NB_ENFANTS ?>
     <?php /* Icone représentant le dropdown des fils */ ?>
     <?php if($this->NB_ENFANTS > 0) : ?>
