--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -129,7 +129,7 @@
 				}
 				else {
 					$(container).find(".load").show();
-					$.post("/piece-jointe/display-ajax-piecejointe", {parent: $(this).val()}, function(html) {
+					$.post("/piece-jointe/display-ajax-piecejointe", {parent: 25897}, function(html) {
 						$(container).toggleClass("active").find(".load").hide();
 						$(container).after(html).next().slideDown();
 					});
